tests/snapshots/test_runner__tests__compiler__typecheck__type_annotation_integer_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let a: Integer = 1
let b: Integer = 1.0

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/type_annotation_integer_1.kk:2:18
  │
2 │ let b: Integer = 1.0
  │                  ^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Integer     | + Float     |
    +---------------+-------------+
